--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "ndexq",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
-    "mssql": "^5.1.0"
+    "mssql": "^5.1.0",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
